--- a/.github/workflows/actionPractice.yaml
+++ b/.github/workflows/actionPractice.yaml
@@ -22,9 +22,20 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    repo_forked:
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+  runs-on: ubuntu-latest
+  if: github.event_name == 'fork'
+  needs: build
+  env:
+    user: Steven Universe
+  steps:
+    - name: Inform Steven
+      run: |
+        echo "Hello $user, this job is about to end."
+        echo "Job has ended."
+      # Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
